# qt-interp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: SPEC.md
src/: chartview.cpp  chartview.h  lagrange_interp.cpp  lagrange_interp.h  main.cpp  points.cpp  poly_points.cpp  utils.h
